Worked on issues of goal as pointed by mam, add modules for invest payment gateway and to add earn interest module

--- a/app/modules/common/views/partials/confirmText.html
+++ b/app/modules/common/views/partials/confirmText.html
@@ -1,6 +1,5 @@
-<div class="modal-dialog" role="document">
-    <div class="modal-content">
-        <div class="modal-wrapper">
+      <div class="error-popup-container">
+            <div class="erorr-popup-wrapper">
         
         <header class="login-header">
             <div class="row">
@@ -17,6 +16,5 @@
           
            <button class="fin-app-btn fin-orange" ng-click="confirmDeleteGoal(currentGoal)">Continue</button>
 </div>
-</div>
-</div>
+       </div>
 
