--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -1,13 +1,13 @@
 <section class="fadeIn dashboard goals">
 	<div class="col-xs-12 goal-section">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('retirement')>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" >
 				<div class="goals-cover">
-					<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['retirement']" ng-click="deleteGoal('retirement')">
-						<label><span></span></label>
+					<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['retirement']">
+						<label><span ng-click="deleteGoal('retirement')"></span></label>
 						
 					</div>
-						<div class="image-div">
+						<div class="image-div" ng-click=startGoalAdd('retirement')>
 							<img src="assets/images/retirement.png">
 						</div>
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['retirement']">
@@ -17,13 +17,13 @@
 				</div>
 				<h2>Retirement</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('education')>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
-				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['education']" ng-click="deleteGoal('education')">
-						<label><span></span></label>
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['education']">
+						<label><span ng-click="deleteGoal('education')"></span></label>
 						
 					</div>
-					<div class="image-div">
+					<div class="image-div" ng-click=startGoalAdd('education')>
 						<img src="assets/images/education.png">
 					</div>
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['education']">
@@ -33,13 +33,13 @@
 				</div>
 				<h2>Education</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('property')>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
-				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['property']" ng-click="deleteGoal('property')">
-						<label><span></span></label>
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['property']">
+						<label><span ng-click="deleteGoal('property')"></span></label>
 						
 					</div>
-					<div class="image-div">
+					<div class="image-div" ng-click=startGoalAdd('property')>
 						<img src="assets/images/property.png">
 					</div>
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['property']">
@@ -49,13 +49,13 @@
 				</div>
 				<h2>Property</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('automobile')>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
-				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['automobile']" ng-click="deleteGoal('automobile')">
-						<label><span></span></label>
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['automobile']">
+						<label><span ng-click="deleteGoal('automobile')"></span></label>
 						
 					</div>
-					<div class="image-div">
+					<div class="image-div" ng-click=startGoalAdd('automobile')>
 						<img src="assets/images/automobile.png">
 					</div>
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['automobile']">
@@ -69,13 +69,13 @@
 	</div>
 	<div class="col-xs-12 goal-section">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('vacation')>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
-						<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['vacation']" ng-click="deleteGoal('vacation')">
-						<label><span></span></label>
+						<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['vacation']">
+						<label><span ng-click="deleteGoal('vacation')"></span></label>
 						
 					</div>
-						<div class="image-div">
+						<div class="image-div" ng-click=startGoalAdd('vacation')>
 							<img src="assets/images/vacation.png">
 						</div>
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['vacation']">
@@ -85,13 +85,13 @@
 				</div>
 				<h2>Vacation</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('wedding')>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
-				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['wedding']" ng-click="deleteGoal('wedding')">
-						<label><span></span></label>
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['wedding']">
+						<label><span ng-click="deleteGoal('wedding')"></span></label>
 						
 					</div>
-					<div class="image-div">
+					<div class="image-div" ng-click=startGoalAdd('wedding')>
 						<img src="assets/images/wedding.png">
 					</div>
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['wedding']">
@@ -101,13 +101,13 @@
 				</div>
 				<h2>Wedding</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('event')>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
-				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['event']" ng-click="deleteGoal('event')">
-						<label><span></span></label>
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['event']">
+						<label><span ng-click="deleteGoal('event')"></span></label>
 						
 					</div>
-					<div class="image-div">
+					<div class="image-div" ng-click=startGoalAdd('event')>
 						<img src="assets/images/others.png">
 					</div>
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['event']">
@@ -117,13 +117,13 @@
 				</div>
 				<h2>Others</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('jewellery')>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
-				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['jewellery']" ng-click="deleteGoal('jewellery')">
-						<label><span></span></label>
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['jewellery']">
+						<label><span ng-click="deleteGoal('jewellery')"></span></label>
 						
 					</div>
-					<div class="image-div">
+					<div class="image-div" ng-click=startGoalAdd('jewellery')>
 						<img src="assets/images/luxurious.png">
 					</div>
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['jewellery']">
