--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -116,7 +116,7 @@
 			</div>
 			<div class="calculated-right-cover">
 				<div class="total-text">
-					<p><span class="currency">&#8377;</span><span class="amount">{{recommendedSchemesObject.total_sum}}</span></p>
+					<p><span class="currency">&#8377;</span><span class="amount">{{totalAnnualInvest}}</span></p>
 				</div>
 			</div>
 		</div>
