--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -101,11 +101,11 @@
 								<scheme-chart title="pieTitle" items="resultPercentage" colors="colors"></scheme-chart>
 							</div>
 						</div>
-						<div class="col-xs-6 trackPerformanceLegendCont">
-						<div class="trackPerformanceLegends">
-							<p ng-repeat="legend in legends" class="no-padding"><span class="content"></span><span class="legend-cover">
+						<div class="col-xs-6 trackPerformanceLegendCont no-padding">
+						<div class="trackPerformanceLegends col-xs-12 no-padding">
+							<p ng-repeat="legend in legends" class="no-padding col-xs-6 no-padding"><span class="content"></span><span class="legend-cover">
 								<span class="legend-cover">
-									<span class="legend-main" ng-style="{'background-color':legend.color,'width':legend.value+'%'}">
+									<span class="legend-main" ng-style="{'background-color':legend.color,'width':(legend.value)+'%'}">
 										<span class="right"></span>
 										<span class="left" ng-style="{'border-left':legend.borderColor}"></span>
 										<span class="value" ng-bind="legend.value+' %'"></span>
