--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -298,24 +298,26 @@ section{
 				.trackPerformanceLegends{
 					margin-top: 50%;
 					float: left;
+					padding: 0;
 					p{
-						width: 50%;
+						
 						float: left;
 						margin-right: 0;
 					}
 					.legend-cover{
 						float: left;
-						margin-left:10px;
+						
 						span{
 							
 						}
-						min-width:146px;
+						width:100%;
 						.legend-main{
 							height:18px;
 						    position:relative;
 							top: 6px;
 							display:table;
 							float:left;
+							
 						    .right{
 								position:absolute;
 								left:0px;
