--- a/less/widgets.less
+++ b/less/widgets.less
@@ -103,6 +103,7 @@
 			.PIXEL2EM(16);
 			position: absolute;
 			z-index: 1000;
+			margin:0px;
 		}
 		.orbit{
 			width: 175px;
@@ -176,6 +177,9 @@
     		color: rgb( 36, 122, 188 ) !important;
 		}
 	}
+	.blur-guageCalculator{
+		opacity: 0.5;
+	} 
 	.bottom-text{
 		.GLOBAL_FONT_STYLE('Roboto-Bold',@black,normal);
 		.PIXEL2EM(16)!important;
