--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3898,6 +3898,9 @@ section.dashboard .goals-cover .checkbox-cover-delete label span {
     margin-bottom: 5%;
   }
 }
+section.dashboard .goals-cover-disabled {
+  opacity: 0.5;
+}
 section.planinvest {
   padding-top: 3%;
   padding-bottom: 2%;
@@ -4500,6 +4503,7 @@ section.quickInvest .started {
   font-size: 1em;
   position: absolute;
   z-index: 1000;
+  margin: 0px;
 }
 .meter-widget-cover .guage .orbit {
   width: 175px;
@@ -4585,6 +4589,9 @@ section.quickInvest .started {
   margin-top: 5px;
   padding-bottom: 10px;
   color: #247abc !important;
+}
+.meter-widget-cover .blur-guageCalculator {
+  opacity: 0.5;
 }
 .meter-widget-cover .bottom-text {
   font-family: 'Roboto-Bold';
@@ -6829,16 +6836,15 @@ section.trackPerformance .chart-cover.scheme-pie .customPanel {
 section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends {
   margin-top: 50%;
   float: left;
+  padding: 0;
 }
 section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends p {
-  width: 50%;
   float: left;
   margin-right: 0;
 }
 section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover {
   float: left;
-  margin-left: 10px;
-  min-width: 146px;
+  width: 100%;
 }
 section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover .legend-main {
   height: 18px;
