--- a/app/modules/common/views/partials/error_popup.html
+++ b/app/modules/common/views/partials/error_popup.html
@@ -13,6 +13,9 @@
             </div>
         </header>
           
-        <button class="fin-app-btn fin-orange" ng-click="ngDialog.close()" >Close</button>
+        <button ng-if="!confirmShow" class="fin-app-btn fin-orange" ng-click="ngDialog.close()" >Close</button>
+        <button ng-if="confirmShow" class="fin-app-btn fin-orange" ng-click="ngDialog.close()" >Close</button>
+
+        
         </div>
        </div>
